--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,18 +13,52 @@
     <link rel="shortcut icon" href="../imagenes/1.a- Logo2.png" type="image/x-icon">
     <title>Sobre Mi</title>
 </head>
-<body class="grilla">
-    <header class="cabecera">
+<body class="container-fluid">
+  <!-- INICIO DE FILA -->
+  <section class="row header">
+    <!-- INICIO DE COLUMNA -->
+    <section class="col-sm-12 col-md-10 col-lg-6">
+      <header class="cabecera">
         <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
-        <ul class="cabecera__ul">
-          <li><a href="./sobremi.html">Sobre Mi</a></li>
-          <li><a href="./porfolio.html">Porfolio</a></li>
-          <li><a href="./servicios.html">Servicios</a></li>
-          <li><a href="./skills.html">Skills</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-    </header>
-    <main class="grid__sM">
+      </header>
+      <!-- FIN DE COLUMNA -->
+    </section>
+    <!-- INICIO DE COLUMNA -->
+    <section class="col">
+      <!-- INICIO DE NAV -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav gap-5">
+              <li class="nav-item">
+                <a class="nav-link active text-white" aria-current="page" href="../pages/sobremi.html">Sobre Mi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="../pages/porfolio.html">Porfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="../pages/servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="../pages/skills.html">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="../pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- FIN DE COLUMNA -->
+    </section>
+    <!-- FIN DE FILA -->
+  </section>
+
+    <!-- <main class="row main">
       <div class="grid__contenido">
         <h1>Sobre Mí</h1>
         <div class="grid__linea"></div>
@@ -34,23 +70,48 @@
        <div class="grid__contenido">
           <img src="../imagenes/2-imagen-sobreMi.png" alt="Chica con cámara">
        </div>
-    </main>
-    <footer class="pie">
-        <h2>© AV 2022</h2>
-        <ul class="pie__ul">
-          <li>
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><img src="../imagenes/icono-facebook.png" alt="Logo Facebook"></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-instagram.png" alt="Logo Instagram"></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-linkedin.png" alt="Logo Linkedln"></a>
-          </li>
-          <li>
-            <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-behance.png" alt=""> </a>
-          </li>
-        </ul>
-    </footer>
+    </main> -->
+<!-- INICIO DE FILA -->
+<section class="row main">
+  <!-- INICIO DE COLUMNA -->
+  <div class="col columnsO1">
+    <h1>Sobre Mí</h1>
+    <p class="grid__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi aliquam, facilis provident maxime eaque quae tempora. Repellat, deserunt beatae reiciendis consequatur eveniet porro dignissimos eos, blanditiis praesentium ipsa numquam asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident odit aspernatur perspiciatis molestias! Id beatae dignissimos laudantium in quas molestias corrupti sequi asperiores unde sapiente, cum eos at ea! </p>
+  </div>
+  <!-- INICIO DE COLUMNA -->
+  <div class="col columnsO2">
+    <img src="../imagenes/2-imagen-sobreMi.png" alt="Chica con cámara">
+  </div>
+</section>
+<section class="row pie">
+  <div class="col">
+    <h2>© AV 2022</h2>
+  </div>
+  <nav class="col">
+    <ul class="pie__ul">
+      <li>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><img
+            src="../imagenes/icono-facebook.png" alt="Logo Facebook"></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <img
+            src="../imagenes/icono-instagram.png" alt="Logo Instagram"></a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank"
+          rel="noopener referrer"> <img src="../imagenes/icono-linkedin.png" alt="Logo Linkedln"></a>
+      </li>
+      <li>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <img
+            src="../imagenes/icono-behance.png" alt=""> </a>
+      </li>
+    </ul>
+  </nav>
+</section>
+      <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous">
+    </script>
 </body>
 </html>
