Agrego bootstrap a pagina Porfolio

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -57,29 +57,15 @@
     </section>
     <!-- FIN DE FILA -->
   </section>
-
-    <!-- <main class="row main">
-      <div class="grid__contenido">
-        <h1>Sobre Mí</h1>
-        <div class="grid__linea"></div>
-      </div>
-       <div class="grid__contenido">
-          
-          <p class="grid__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi aliquam, facilis provident maxime eaque quae tempora. Repellat, deserunt beatae reiciendis consequatur eveniet porro dignissimos eos, blanditiis praesentium ipsa numquam asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident odit aspernatur perspiciatis molestias! Id beatae dignissimos laudantium in quas molestias corrupti sequi asperiores unde sapiente, cum eos at ea! </p>
-       </div>
-       <div class="grid__contenido">
-          <img src="../imagenes/2-imagen-sobreMi.png" alt="Chica con cámara">
-       </div>
-    </main> -->
 <!-- INICIO DE FILA -->
 <section class="row main">
   <!-- INICIO DE COLUMNA -->
-  <div class="col columnsO1">
+  <div class="col-sm-12 col-md-10 col-lg-6 columnsO1">
     <h1>Sobre Mí</h1>
     <p class="grid__descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi aliquam, facilis provident maxime eaque quae tempora. Repellat, deserunt beatae reiciendis consequatur eveniet porro dignissimos eos, blanditiis praesentium ipsa numquam asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident odit aspernatur perspiciatis molestias! Id beatae dignissimos laudantium in quas molestias corrupti sequi asperiores unde sapiente, cum eos at ea! </p>
   </div>
   <!-- INICIO DE COLUMNA -->
-  <div class="col columnsO2">
+  <div class="col-sm-12 col-md-10 col-lg-6 columnsO2">
     <img src="../imagenes/2-imagen-sobreMi.png" alt="Chica con cámara">
   </div>
 </section>
@@ -108,10 +94,10 @@
     </ul>
   </nav>
 </section>
-      <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous">
-    </script>
+  </script>
 </body>
 </html>
