--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- INICIO DE FILA -->
   <section class="row header">
     <!-- INICIO DE COLUMNA -->
-    <section class="col-sm-12 col-md-10 col-lg-6">
+    <section class="col-sm-12 col-md-3 col-lg-6">
       <header class="cabecera">
         <a href="./index.html"><img src="./imagenes/1.a- Logo2.png" alt="Logo"></a>
       </header>
@@ -62,11 +62,11 @@
   <!-- INICIO DE FILA -->
   <section class="row main">
     <!-- INICIO DE COLUMNA -->
-    <div class="col column1">
+    <div class="col-sm-2 col-md-6 col-lg-3 column1">
       <img src="./imagenes/1.b-indexImagen.jpg" alt="">
     </div>
     <!-- INICIO DE COLUMNA -->
-    <div class="col column2">
+    <div class="col-sm-12 col-md-10 col-lg-6 column2">
       <h1>Ana Laura Villarruel</h1>
       <h3>Diseño & Audiovisual</h3>
     </div>
@@ -75,7 +75,7 @@
     <div class="col">
       <h2>© AV 2022</h2>
     </div>
-    <nav class="col">
+    <nav class="col-sm-12 col-md-10 col-lg-6">
       <ul class="pie__ul">
         <li>
           <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><img
