--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -12,16 +12,24 @@
     <title>Sobre Mi</title>
 </head>
 <body class="grilla">
-    <header class="cabecera">
-        <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
-        <ul class="cabecera__ul">
-          <li><a href="./sobremi.html">Sobre Mi</a></li>
-          <li><a href="./porfolio.html">Porfolio</a></li>
-          <li><a href="./servicios.html">Servicios</a></li>
-          <li><a href="./skills.html">Skills</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-    </header>
+  <header class="cabecera">
+    <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
+    <nav class="nav" id="nav">
+      <ul class="cabecera__ul">
+        <li><a href="../pages/sobremi.html">Sobre Mi</a></li>
+        <li><a href="../pages/porfolio.html">Porfolio</a></li>
+        <li><a href="../pages/servicios.html">Servicios</a></li>
+        <li><a href="../pages/skills.html">Skills</a></li>
+        <li><a href="../pages/contacto.html">Contacto</a></li>
+      </ul>
+      <a href="#nav" class="nav__hamburguesa">
+        <img src="../assets/menu.svg" class="nav__icon" alt="icono menu">
+      </a>
+      <a href="#" class="nav__close">
+        <img src="../assets/close.svg" class="nav__icon" alt="icono menu">
+      </a>
+    </nav>
+  </header>
     <main class="grid__sM">
       <div class="grid__contenido">
         <h1>Sobre Mí</h1>
