--- a/pages/skills.html
+++ b/pages/skills.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Manejo de Herramientas de Diseño y Software de Edición Audiovisual">
+  <meta name="keywords" content="diseño, fotografia, animacion, edicion, audiovisual">
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
