Agrego titule corresponiente a cada page

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,7 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="../imagenes/1.a- Logo2.png" type="image/x-icon">
-  <title>Ana Laura Villarruel Porfolio</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>Servicios</title>
 </head>
 <body class="grilla">
   <header class="cabecera">
