Agrego nuevas imagenes a porfolio y servicios

--- a/pages/porfolio.html
+++ b/pages/porfolio.html
@@ -38,14 +38,26 @@
         <h1>Trabajos</h1>
     </div>
     <section class="grid__pO">
-      <div class="grid__img1">
-        <img src="../imagenes/3-trabajos1.jpg" alt="">
+      <div class="grid__img">
+        <img src="https://i.ibb.co/BczJwRq/IMG-0360.jpg" alt="Foto de recital-Pedales">
       </div>
-      <div class="grid__img2">
-        <img src="../imagenes/3.b-diseñografico.jpg" alt="Diseño">
+      <div class="grid__img">
+        <img src="https://i.ibb.co/pXFP7YF/IMG-0352.jpg" alt="Foto de recital-Teclado">
       </div>
-      <div class="grid__img3">
-        <img src="../imagenes/3.c- fotograf.jpg" alt="Fotografia">
+      <div class="grid__img">
+        <img src="https://i.ibb.co/31LySrj/Script-Mendoza-portada.png" alt="Poster de Documental">
+      </div>
+      <div class="grid__img">
+        <img src="https://i.ibb.co/9pXMwhD/Foto-Corto-Almohadon-de-Plumas-11x4cm-300dpi.jpg" alt="Imagen de Corto Audiovisual">
+      </div>
+      <div class="grid__img">
+        <img src="https://i.ibb.co/W5WQ063/ID-00-00-06-13-Imagen-fija001.jpg" alt="Imagen de Corto Audiovisual">
+      </div>
+      <div class="grid__img">
+        <img src="https://i.ibb.co/87HNf28/Minuto-Cero-Poster-02.png" alt="Poster de Documental">
+      </div>
+      <div class="grid__img">
+        <img src="https://i.ibb.co/Z6kfXKh/MVI-3749-00-00-05-11-Imagen-fija003.png" alt="Imagen de Documental">
       </div>
  
     </section>
@@ -54,16 +66,16 @@
     <h2>© AV 2022</h2>
     <ul class="pie__ul">
       <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><img src="../imagenes/icono-facebook.png" alt="Logo Facebook"></a>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i class='bx bxl-facebook-circle' ></i></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-instagram.png" alt="Logo Instagram"></a>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-linkedin.png" alt="Logo Linkedln"></a>
+        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
       </li>
       <li>
-        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-behance.png" alt=""> </a>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
       </li>
     </ul>
   </footer>
