--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -39,19 +39,19 @@
         <h1>Servicios</h1>
       </div> 
       <div class="contenedor">
-        <img src="../imagenes/4.a- diseño-porfolio.jpg" alt="Foto de diseño">
+        <img src="https://i.ibb.co/MBjnV1m/Dise-o-02.png" alt="Foto de diseño">
         <h3>Diseño</h3>
       </div>
       <div class="contenedor" >
-        <img src="../imagenes/4.b-edicion.jpg" alt="Foto de edicion">
+        <img src="https://i.ibb.co/swT69n4/Edicion-03-03.png" alt="Foto de edicion">
         <h3 >Edición</h3>
       </div>
       <div class="contenedor">
-        <img src="../imagenes/4.c-animacion.jpg" alt="Foto de animacion">
+        <img src="https://i.ibb.co/f17wd5T/Animacion-06.png" alt="Foto de animacion">
         <h3>Animación</h3>
       </div>
       <div class="contenedor">
-        <img src="../imagenes/4.d- ejemplo-fotografia-01.png" alt="Foto de audiovisual">
+        <img src="https://i.ibb.co/0G9rCc3/Video-D-05.png" alt="Ilustración de cámara">
         <h3>Foto y Video</h3>
       </div>
     </div>
@@ -60,16 +60,16 @@
     <h2>© AV 2022</h2>
     <ul class="pie__ul">
       <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><img src="../imagenes/icono-facebook.png" alt="Logo Facebook"></a>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i class='bx bxl-facebook-circle' ></i></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-instagram.png" alt="Logo Instagram"></a>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-linkedin.png" alt="Logo Linkedln"></a>
+        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
       </li>
       <li>
-        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-behance.png" alt=""> </a>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
       </li>
     </ul>
   </footer>
