--- a/pages/skills.html
+++ b/pages/skills.html
@@ -68,16 +68,16 @@
     <h2>© AV 2022</h2>
     <ul class="pie__ul">
       <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><img src="../imagenes/icono-facebook.png" alt="Logo Facebook"></a>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i class='bx bxl-facebook-circle' ></i></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-instagram.png" alt="Logo Instagram"></a>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-linkedin.png" alt="Logo Linkedln"></a>
+        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
       </li>
       <li>
-        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <img src="../imagenes/icono-behance.png" alt=""> </a>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
       </li>
     </ul>
   </footer>
