Modifico responsive y textos en pagina sobre mi

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -39,7 +39,7 @@
         <div class="grid__linea"></div>
       </div>
        <div class="grid__contenido">
-          <p class="grid__descripcion">Hola Soy Ana! Soy productora audiovisual y estudie diseño grafico en la Universidad Nacional de Cuyo. En este momento estoy estudiando para convertirme en desarrolladora web y en programación full stack. Me gusta el diseño y me apasiona el cine, tengo experiencias como diseñadora grafica, realizadora audiovisual en producciones locales, creación de guiones y en animación 2D. Siempre me ha entusiasmo seguir aprendiendo nuevas herramientas como forma de expresión,  seguir desafiándome y esforzarme en los objetivos que me propongo. Me apasiona arte, la expresión en todas sus facetas, la creatividad para crear nuevos mundos.</p>
+          <p class="grid__descripcion">Hola Soy Ana! Soy productora audiovisual y estudie diseño grafico en la Universidad Nacional de Cuyo. En este momento estoy estudiando programación full stack. Me gusta el diseño y me apasiona el cine, tengo experiencias como diseñadora grafica, realizadora audiovisual en producciones locales, creación de guiones y en animación 2D. Siempre me ha entusiasmo seguir aprendiendo nuevas herramientas como forma de expresión,  seguir desafiándome y esforzarme en los objetivos que me propongo. Me apasiona arte y la creatividad para crear mundos nuevos.</p>
        </div>
        <div class="grid__contenido">
           <img src="../imagenes/2-imagen-sobreMi.png" alt="Chica con cámara">
