Agrego imagen en pagina contacto y arreglo responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Pongase en contacto para solicitar servicio de diseño, fotografía y producciones audiovisuales">
+  <meta name="description"
+    content="Pongase en contacto para solicitar servicio de diseño, fotografía y producciones audiovisuales">
   <meta name="keywords" content="diseño, fotografia, animacion, edicion, audiovisual">
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +16,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Contacto</title>
 </head>
+
 <body class="grilla">
   <header class="cabecera">
     <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
@@ -35,7 +38,8 @@
   </header>
   <main class="grillaCont">
     <div class="contacto">
-        <h1>Contacto</h1>
+      <h1>Contacto</h1>
+      <p>Pongase en contacto para obtener más información sobre mi trabajo. Una vez enviada su consulta, me pondré en contacto con usted para porporcionarle una guia de preguntas recurrentes de clientes potenciales y un presupuesto acorde al objetivo de su proyecto para comenzar a trabajar juntos este camino.</p>
     </div>
     <div class="formulario">
       <form>
@@ -48,23 +52,31 @@
         <input type="button" value="Enviar" id="boton">
       </form>
     </div>
+    <div class="contacto__img">
+      <img src="https://i.ibb.co/7SdB5g0/4-Mesa-de-trabajo-1.png" alt="Imagen de lapiz">
+    </div>
   </main>
   <footer class="pie">
     <h2>© AV 2022</h2>
     <ul class="pie__ul">
       <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i class='bx bxl-facebook-circle' ></i></a>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i
+            class='bx bxl-facebook-circle'></i></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
+        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank"
+          rel="noopener referrer"> <i class='bx bxl-linkedin'></i></a>
       </li>
       <li>
-        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-behance'></i> </a>
       </li>
     </ul>
   </footer>
 </body>
+
 </html>
