Agrego animacion y video a proyecto

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Soy Diseñadora y Productora Audiovisual. Vivo en Mendoza, Argentina. Brindo servicios audiovisuales, diseño y fotografía.">
+  <meta name="description"
+    content="Soy Diseñadora y Productora Audiovisual. Vivo en Mendoza, Argentina. Brindo servicios audiovisuales, diseño y fotografía.">
   <meta name="keywords" content="diseño, fotografia, animacion, edicion, audiovisual">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,9 +16,13 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Ana Laura Villarruel Porfolio</title>
 </head>
+
 <body class="grilla">
   <header class="cabecera">
-    <a href="./index.html"><img src="./imagenes/1.a- Logo2.png" alt="Logo"></a>
+    <div class="cabecera__logo">
+      <a href="./index.html"><img src="./imagenes/1.a- Logo2.png" alt="Logo"></a>
+    </div>
+
     <nav class="nav" id="nav">
       <ul class="cabecera__ul">
         <li><a href="./pages/sobremi.html">Sobre Mi</a></li>
@@ -35,13 +41,14 @@
   </header>
   <main class="grid">
     <div class="grid__eM">
-      <img src="./imagenes/1.b-indexImagen.jpg" alt="">
+      <video autoplay muted loop>
+        <source src="./imagenes/videomar.mp4" type="video/mp4">
+      </video>
     </div>
     <div class="grid__eM">
-      <!-- <h1>Diseño Grafico / Producción Audiovisual</h1> -->
       <div class="grid__fondo">
-        <h1>Ana Laura Villarruel  Diseño & Audiovisual</h1>
-        <h2>Ana Laura Villarruel Diseño & Audiovisual</h2>
+        <h1>Ana Laura Villarruel / Diseño & Audiovisual</h1>
+        <h2>Ana Laura Villarruel / Diseño & Audiovisual</h2>
       </div>
     </div>
   </main>
@@ -49,18 +56,24 @@
     <h2>© AV 2022</h2>
     <ul class="pie__ul">
       <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i class='bx bxl-facebook-circle' ></i></a>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i
+            class='bx bxl-facebook-circle'></i></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
+        <a href="https://www.linkedin.com/in/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-linkedin'></i>
+        </a>
       </li>
       <li>
-        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-behance'></i> </a>
       </li>
     </ul>
   </footer>
 </body>
+
 </html>
