--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,7 @@
   <main class="grillaCont">
     <div class="contacto">
       <h1>Contacto</h1>
-      <p>Pongase en contacto para obtener más información sobre mi trabajo. Una vez enviada su consulta, me pondré en contacto con usted para porporcionarle una guia de preguntas recurrentes de clientes potenciales y un presupuesto acorde al objetivo de su proyecto para comenzar a trabajar juntos este camino.</p>
+      <p>Pongase en contacto para obtener más información sobre mi trabajo. Una vez enviada su consulta, me pondré en contacto con usted para porporcionarle una guia de preguntas recurrentes de clientes potenciales y un presupuesto acorde al objetivo de su proyecto para comenzar a trabajar juntos.</p>
     </div>
     <div class="formulario">
       <form>
@@ -68,8 +68,9 @@
             class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank"
-          rel="noopener referrer"> <i class='bx bxl-linkedin'></i></a>
+        <a href="https://www.linkedin.com/in/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+          class='bx bxl-linkedin'></i>
+      </a>
       </li>
       <li>
         <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i
