--- a/pages/porfolio.html
+++ b/pages/porfolio.html
@@ -72,7 +72,9 @@
         <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
+        <a href="https://www.linkedin.com/in/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+          class='bx bxl-linkedin'></i>
+      </a>
       </li>
       <li>
         <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
