--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Diseñadora freelancer, Productora Audiovisual recibida en Universidad Nacional de Cuyo. Creación de contenido audiovisual y trabajos de diseño">
-    <meta name="keywords" content="diseño, fotografia, animacion, edicion, audiovisual">
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../imagenes/1.a- Logo2.png" type="image/x-icon">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Sobre Mi</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Diseñadora freelancer, Productora Audiovisual recibida en Universidad Nacional de Cuyo. Creación de contenido audiovisual y trabajos de diseño">
+  <meta name="keywords" content="diseño, fotografia, animacion, edicion, audiovisual">
+  <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="../imagenes/1.a- Logo2.png" type="image/x-icon">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>Sobre Mi</title>
 </head>
+
 <body class="grilla">
   <header class="cabecera">
     <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
@@ -33,34 +36,47 @@
       </a>
     </nav>
   </header>
-    <main class="grid__sM">
-      <div class="grid__contenido">
-        <h1>Sobre Mí</h1>
-        <div class="grid__linea"></div>
-      </div>
-       <div class="grid__contenido">
-          <p class="grid__descripcion">Hola Soy Ana! Soy productora audiovisual y estudie diseño grafico en la Universidad Nacional de Cuyo. En este momento estoy estudiando programación full stack. Me gusta el diseño y me apasiona el cine, tengo experiencias como diseñadora grafica, realizadora audiovisual en producciones locales, creación de guiones y en animación 2D. Siempre me ha entusiasmo seguir aprendiendo nuevas herramientas como forma de expresión,  seguir desafiándome y esforzarme en los objetivos que me propongo. Me apasiona arte y la creatividad para crear mundos nuevos.</p>
-       </div>
-       <div class="grid__contenido">
-          <img src="../imagenes/2-imagen-sobreMi.png" alt="Chica con cámara">
-       </div>
-    </main>
-    <footer class="pie">
-        <h2>© AV 2022</h2>
-        <ul class="pie__ul">
-          <li>
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i class='bx bxl-facebook-circle' ></i></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i class='bx bxl-instagram'></i></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/analauvillarrueldesignvideoeditor/" target="_blank" rel="noopener referrer"> <i class='bx bxl-linkedin' ></i></a>
-          </li>
-          <li>
-            <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i class='bx bxl-behance'></i> </a>
-          </li>
-        </ul>
-    </footer>
+  <main class="grid__sM">
+    <div class="grid__contenido">
+      <h1>Sobre Mí</h1>
+      <div class="grid__linea"></div>
+    </div>
+    <div class="grid__contenido">
+      <p class="grid__descripcion">Hola Soy Ana! Soy productora audiovisual y estudie diseño grafico en la Universidad
+        Nacional de Cuyo. En este momento estoy estudiando programación full stack. Me gusta el diseño y me apasiona el
+        cine, tengo experiencias como diseñadora grafica, realizadora audiovisual en producciones locales, creación de
+        guiones y en animación 2D. Siempre me ha entusiasmo seguir aprendiendo nuevas herramientas como forma de
+        expresión, seguir desafiándome y esforzarme en los objetivos que me propongo. Me apasiona arte y la creatividad
+        para crear mundos nuevos.</p>
+    </div>
+    <div class="grid__contenido">
+      <video  autoplay muted loop>
+        <source src="../imagenes/Dibujo3.mp4" type="video/mp4">
+      </video>
+    </div>
+  </main>
+  <footer class="pie">
+    <h2>© AV 2022</h2>
+    <ul class="pie__ul">
+      <li>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener referrer"><i
+            class='bx bxl-facebook-circle'></i></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-instagram'></i></a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/analauvillarruel/" target="_blank" rel="noopener referrer"> <i
+          class='bx bxl-linkedin'></i>
+      </a>
+      </li>
+      <li>
+        <a href="https://www.behance.net/analaura58" target="_blank" rel="noopener referrer"> <i
+            class='bx bxl-behance'></i> </a>
+      </li>
+    </ul>
+  </footer>
 </body>
+
 </html>
