--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <div class="grid__eM">
       <video autoplay muted loop>
         <source src="./imagenes/videomar.mp4" type="video/mp4">
+        <source src="./imagenes/videomar.ogg" type="video/ogg">
+        <source src="./imagenes/videomar.webm" type="video/webm"> 
+        Tu navegador no es compatible con HTML 5
       </video>
     </div>
     <div class="grid__eM">
