--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
   <main class="grid">
     <div class="grid__eM">
       <video autoplay muted loop>
-        <source src="./imagenes/videomar.mp4" type="video/mp4">
+        <source src="./imagenes/videomar.mp4" type="video/mp4" codecs="avc1, mp4a">
         <source src="./imagenes/videomar1.mp4" type="video/mp4">
         <source src="./imagenes/videomar.ogg" type="video/ogg">
-        <source src="./imagenes/videomar.webm" type="video/webm">
+        <source src="./imagenes/videomar.webm" type="video/webm" >
+        <source src="./imagenes/videomar.flv" type="video/flv">
         <object  type="application/x-shockwave-flash" data="fallback.swf">
           <param name="movie" value="fallback.swf" />
           <param name="flashvars" value="autostart=true&amp;file=video.flv" />
-  </object> 
+        </object> 
         Tu navegador no es compatible con HTML 5
       </video>
     </div>
