--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="./imagenes/1.a- Logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./imagenes/Logo_Color.png" type="image/x-icon">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Ana Laura Villarruel Porfolio</title>
 </head>
@@ -20,7 +20,7 @@
 <body class="grilla">
   <header class="cabecera">
     <div class="cabecera__logo">
-      <a href="./index.html"><img src="./imagenes/1.a- Logo2.png" alt="Logo"></a>
+      <a href="./index.html"><img src="./imagenes/Logo_Color.png" alt="Logo"></a>
     </div>
 
     <nav class="nav" id="nav">
@@ -42,7 +42,9 @@
   <main class="grid">
     <div class="grid__eM">
       <video autoplay muted loop>
+        <source src="./imagenes/Prueba1.avi" type="video/mp4">
         <source src="./imagenes/videomar.mp4" type="video/mp4">
+        
       </video>
     </div>
     <div class="grid__eM">
