--- a/pages/porfolio.html
+++ b/pages/porfolio.html
@@ -10,13 +10,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="../imagenes/1.a- Logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imagenes/Logo_Color.png" type="image/x-icon">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Porfolio</title>
 </head>
 <body class="grilla">
   <header class="cabecera">
-    <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
+    <a href="../index.html"><img src="../imagenes/Logo_Color.png" alt="Logo"></a>
     <nav class="nav" id="nav">
       <ul class="cabecera__ul">
         <li><a href="../pages/sobremi.html">Sobre Mi</a></li>
@@ -38,25 +38,25 @@
         <h1>Trabajos</h1>
     </div>
     <section class="grid__pO">
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/BczJwRq/IMG-0360.jpg" alt="Foto de recital-Pedales">
       </div>
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/pXFP7YF/IMG-0352.jpg" alt="Foto de recital-Teclado">
       </div>
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/31LySrj/Script-Mendoza-portada.png" alt="Poster de Documental">
       </div>
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/9pXMwhD/Foto-Corto-Almohadon-de-Plumas-11x4cm-300dpi.jpg" alt="Imagen de Corto Audiovisual">
       </div>
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/W5WQ063/ID-00-00-06-13-Imagen-fija001.jpg" alt="Imagen de Corto Audiovisual">
       </div>
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/87HNf28/Minuto-Cero-Poster-02.png" alt="Poster de Documental">
       </div>
-      <div class="grid__img">
+      <div class="grid__img" loading="lazy">
         <img src="https://i.ibb.co/Z6kfXKh/MVI-3749-00-00-05-11-Imagen-fija003.png" alt="Imagen de Documental">
       </div>
  
