--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,14 +12,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="../imagenes/1.a- Logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imagenes/Logo_Color.png" type="image/x-icon">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Contacto</title>
 </head>
 
 <body class="grilla">
   <header class="cabecera">
-    <a href="../index.html"><img src="../imagenes/1.a- Logo2.png" alt="Logo"></a>
+    <a href="../index.html"><img src="../imagenes/Logo_Color.png" alt="Logo"></a>
     <nav class="nav" id="nav">
       <ul class="cabecera__ul">
         <li><a href="../pages/sobremi.html">Sobre Mi</a></li>
