Agrego video en index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="grid__eM">
       <video autoplay muted loop>
         <source src="./imagenes/Prueba1.avi" type="video/avi">
+        <source src="./imagenes/Prueba.wmv" type="video/wmv">
         <source src="./imagenes/videomar1.mp4" type="video/mp4">
         <source src="./imagenes/videomar.ogg" type="video/ogg">
         <source src="./imagenes/videomar.webm" type="video/webm" >
