Arreglo texto en sobre mi

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -42,12 +42,7 @@
       <div class="grid__linea"></div>
     </div>
     <div class="grid__contenido">
-      <p class="grid__descripcion">Hola Soy Ana! Soy productora audiovisual y estudie diseño grafico en la Universidad
-        Nacional de Cuyo. En este momento estoy estudiando programación full stack. Me gusta el diseño y me apasiona el
-        cine, tengo experiencias como diseñadora grafica, realizadora audiovisual en producciones locales, creación de
-        guiones y en animación 2D. Siempre me ha entusiasmo seguir aprendiendo nuevas herramientas como forma de
-        expresión, seguir desafiándome en los objetivos que me propongo. Me apasiona arte y la creatividad
-        para crear nuevos mundos. Me gusta que la persona que vea mi trabajo viva una experiencia única. </p>
+      <p class="grid__descripcion">Hola Soy Ana! Soy productora audiovisual. Estudié diseño gráfico en la Universidad Nacional de Cuyo. Actualmente estoy estudiando programación full-stack. Me gusta el diseño, el cine y la música. Tengo experiencia como diseñadora gráfica, realizadora audiovisual en producciones locales, guionista y animadora 2D. Siempre me ha entusiasmado seguir aprendiendo nuevas herramientas como forma de expresión y seguir desafiándome para alcanzar los objetivos que me propongo. Me apasiona arte y la creatividad para construir nuevos mundos. Me interesa que la persona que vea mi trabajo viva una experiencia única. </p>
     </div>
     <div class="grid__contenido">
       <video  autoplay muted loop>
